fix overflow issue, search results mobile view size fix

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -72,6 +72,7 @@
   }
   .nav-panel {
     justify-content: space-around;
+    overflow: hidden;
 
     a {
       text-align: center;
