--- a/src/components/SearchResults/SearchResults.scss
+++ b/src/components/SearchResults/SearchResults.scss
@@ -78,7 +78,7 @@
         margin: 3vw;
         .movie-container {
             padding: 8vw 2vw;
-            width: 80%;
+            width: 250px;
         }
     }
 }
@@ -88,7 +88,7 @@
         margin: 9vw;
         .movie-container {
             padding: 8vw 2vw;
-            width: 100%;
+            width: 380px;
         }
     }
 }
